docs/build/iota-sdk/2.0/docs/how-tos/native-tokens/destroy-foundry.mdx
---
title: Destroy a Foundry
sidebar_label: Destroy a Foundry
description: 'How to destroy a foundry using iota-sdk'
image: /img/logo/iota_mark_light.png
tags:
  - how to
  - destroy
  - destroy foundry
  - foundry
  - nodejs
  - python
  - rust
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import DestroyFoundry from '../../_admonitions/_destroy_foundry.md';

If at any point you want to disable the production of your
[native token](/introduction/stardust/explanations/ledger/foundry), you should destroy the foundry.
However, you can only destroy a foundry output as long as its circulating native token supply is zero.

<DestroyFoundry />

## Example Code

Before you run the example, you should make sure the first foundry on your account has zero circulating supply. If you
have no available foundries, you can create one by [creating a native token](create.mdx). If you've already created your
tokens but need to empty the foundry, you can decrease your native token supply by [melting them](melt.mdx).

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

1. Instantiate a [`Wallet`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/core/struct.Wallet.html) and [sync it](../accounts-and-addresses/check-balance.mdx).

2. Get the first foundry in the wallet's balance by calling the [`Balance.foundries()`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/types/balance/struct.Balance.html#method.foundries) function.

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/native_tokens/destroy_foundry.rs#L38
```

</div>

3. Check if all the foundry's tokens have been melted, and [melt](melt.mdx) any tokens in the foundry if not.

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/native_tokens/destroy_foundry.rs#L48-L76
```

</div>


4. Burn the foundry by calling the [`Wallet.burn()`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/core/struct.Wallet.html#method.burn)
   function and passing the `foundry_id` as param.

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/native_tokens/destroy_foundry.rs#L79
```

</div>

5. Await for the transaction to be accepted by the network by calling the [`Wallet.wait_for_transaction_acceptance()`](file:///home/lucas/Documents/IOTA/iota-sdk/target/doc/iota_sdk/wallet/core/struct.Wallet.html#method.wait_for_transaction_acceptance) function.

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/native_tokens/destroy_foundry.rs#L83-L85
```

</div>

</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

1. Instantiate a [`Wallet`](http://localhost:3000/iota-sdk/2.0/references/nodejs/classes/Wallet) and [sync it](../accounts-and-addresses/check-balance.mdx).
2. Get the first foundry in the account's balance by getting the value of the [`Balance.foundries`](http://localhost:3000/iota-sdk/2.0/references/nodejs/interfaces/Balance/#foundries) property.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/native_tokens/destroy-foundry.ts#L27-L32
```

</div>

3. Prepare the transaction that will burn the tokens using the [`Wallet.prepareDestroyFoundry()`](../../references/nodejs/classes/Wallet.md#preparedestroyfoundry)
   function and send the prepared transaction using the [`Wallet.send()`](../../references/nodejs/classes/Wallet.md#send)
   function.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/native_tokens/destroy-foundry.ts#L37-L39
```

</div>

4. Await for the [`Transaction`](../../references/nodejs/classes/Transaction.md) to get confirmed by calling the
[`Wallet.waitForTransactionAcceptance()`](../../references/nodejs/classes/Wallet.md#waitfortransactionacceptance)
function.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/native_tokens/destroy-foundry.ts#L43
```

</div>
</TabItem>
<TabItem value="python" label="Python">

1. Instantiate a [`Wallet`](http://localhost:3000/iota-sdk/2.0/references/python/iota_sdk/wallet/) and [sync it](../accounts-and-addresses/check-balance.mdx).
2. Get the first foundry in the account's balance byt retrieving the value of the [`Balance.foundries`](http://localhost:3000/iota-sdk/2.0/references/python/iota_sdk/types/balance/#balance-objects) attribute.

<div className={'hide-code-block-extras'}>

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/native_tokens/destroy_foundry.py#L21
```

</div>

3. Prepare the transaction that will burn the tokens using the [`Wallet.prepare_destroy_foundry()`](../../references/python/iota_sdk/wallet/wallet.md#prepare_destroy_foundry)
   function and send the prepared transaction using the [`Wallet.send()`](../../references/python/iota_sdk/wallet/wallet.md#send)
   function.

<div className={'hide-code-block-extras'}>

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/native_tokens/destroy_foundry.py#L24
```

</div>

4. Await for the transaction to get accepted by calling the [`Wallet.wait_for_transaction_acceptance()`](../../references/python/iota_sdk/wallet/wallet.md#wait_for_transaction_acceptance)
function.

<div className={'hide-code-block-extras'}>

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/native_tokens/destroy_foundry.py#L24
```

</div>

</TabItem>
</Tabs>

### Full Example Code

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

```rust reference
https://github.com/iotaledger/iota-sdk/blob/2.0/sdk/examples/how_tos/native_tokens/destroy_foundry.rs
```

</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/nodejs/examples/how_tos/native_tokens/destroy-foundry.ts
```

</TabItem>
<TabItem value="python" label="Python">

```python reference
https://github.com/iotaledger/iota-sdk/blob/2.0/bindings/python/examples/how_tos/native_tokens/destroy_foundry.py
```

</TabItem>
</Tabs>

### Expected Output

```plaintext
Foundries before destroying: 51
Transaction sent: 0xe0930e445aa9e78f59e3979744102bb0980fe6332950c7bb4785700dcb24fe8e
Block included: https://explorer.shimmer.network/testnet/block/0x31d08663ae1d175d798d0f2925f41fa97f0eee8f9e233a4f5dacedb1398ed544
Foundries after destroying: 50
```
